# projecto-final-los-backyardigans

./: CMakeLists.txt  README.md
data/: digits01_inputs.csv  digits01_labels.csv
src/: main.cpp
src/Procesamiento/: data_loader.h
src/nn/: neural_network.h  nn_activation.h  nn_dense.h  nn_interfaces.h  nn_loss.h  nn_optimizer.h
src/tensor/: tensor.h
test/: test_relu.cpp  test_tensor.cpp
